fix(docs-website): corrected minor alignment issues on the home page (#11508)

--- a/docs-website/src/pages/_components/SocialMedia/socialmedia.module.scss
+++ b/docs-website/src/pages/_components/SocialMedia/socialmedia.module.scss
@@ -162,8 +162,8 @@
 }
   
 .carousalWrapper{
-    width: 50%;
-    min-width: 280px;
+    width: 40%;
+    min-width: 300px;
 }
 
 .carousalWrapper::before,
